# westafrican-mt-rlhf

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: .env.example
app/backend/: README.md  app.py
app/frontend/: tailwind.config.ts
app/frontend/src/app/: page.tsx
app/frontend/src/lib/: api.ts  data.ts
backend/: app.py
configs/: default.yaml
frontend/: .env.local.example  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx
scripts/: eval.py  run_rlhf.py  run_sft.py  translate.py
src/: __init__.py  config.py  data.py  distributed.py  inference.py  model_utils.py  prompts.py  reward.py  rlhf_train.py  sft_train.py
