[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "west-african-mt-rlhf"
version = "0.1.0"
description = "West African MT fine-tuning with SFT and AfriCOMET-guided RLHF"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.50.0",
    "datasets>=2.19.0",
    "accelerate>=0.33.0",
    "peft>=0.12.0",
    "unbabel-comet>=2.2.0",
    "python-dotenv>=1.0.0",
    "sentencepiece>=0.2.0",
    "sacrebleu>=2.4.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
